--- a/online-help-96-97/task_creating_cluster.adoc
+++ b/online-help-96-97/task_creating_cluster.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: data, center, create, cluster, online, help, system, manager
 summary: "You can use ONTAP System Manager to create and set up a cluster in your data center."
 ---
-= Create a cluster
+= Create a cluster by using System Manager Classic - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use ONTAP System Manager to create and set up a cluster in your data center.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and set up a cluster in your data center.
 
 .About this task
 
