--- a/online-help-96-97/concept_setting_up_cluster.adoc
+++ b/online-help-96-97/concept_setting_up_cluster.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: online, help, cluster, configuration, information, ha, pair, node, management, license, time
 summary: "Setting up the cluster involves gathering the configuration information, creating cluster-management and node-management interfaces, adding licenses, setting up the cluster time, and monitoring HA pairs."
 ---
-= Setting up the cluster
+= Set up the cluster
 :icons: font
 :imagesdir: ../media/
 
