--- a/online-help-96-97/reference_application_provisioning_settings.adoc
+++ b/online-help-96-97/reference_application_provisioning_settings.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: application, provisioning, setting, microsoft, sql, database, applications, san, mongodb, oracle, host, access, initiator, sap, hana, smb
 summary: "When setting up a basic or enhanced template for a database, server, or virtual desktop, you must provide details to System Manager. After an application is provisioned, you can edit the details and specify a resizing (increased size only). This section describes the fields in each template. Only the fields that are required for provisioning or editing the settings of the specific application are displayed."
 ---
-= Application provisioning settings
+= Application provisioning settings in System Manager classic - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-When setting up a basic or enhanced template for a database, server, or virtual desktop, you must provide details to System Manager. After an application is provisioned, you can edit the details and specify a resizing (increased size only). This section describes the fields in each template. Only the fields that are required for provisioning or editing the settings of the specific application are displayed.
+You must provide details when setting up a basic or enhanced template for a database, server, or virtual desktop in ONTAP System Manager classic (available in ONTAP 9.7 and earlier). After an application is provisioned, you can edit the details and specify a resizing (increased size only). This section describes the fields in each template. Only the fields that are required for provisioning or editing the settings of the specific application are displayed.
 
 == Details for Microsoft SQL Database Applications over SAN
 
