--- a/online-help-96-97/task_assigning_disks_to_nodes.adoc
+++ b/online-help-96-97/task_assigning_disks_to_nodes.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, assign, disk, node, online, help
 summary: "You can use System Manager to assign ownership of an unassigned disk to a specific node to increase the capacity of an aggregate or storage pool."
 ---
-= Assigning disks to nodes
+= Assign disks to nodes by using System Manager classic - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to assign ownership of an unassigned disk to a specific node to increase the capacity of an aggregate or storage pool.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to assign ownership of an unassigned disk to a specific node to increase the capacity of an aggregate or storage pool.
 
 .About this task
 
