--- a/online-help-96-97/task_monitoring_status_using_dashboard.adoc
+++ b/online-help-96-97/task_monitoring_status_using_dashboard.adoc
@@ -1,16 +1,4 @@
 ---
 permalink: online-help-96-97/task_monitoring_status_using_dashboard.html
-sidebar: sidebar
-keywords: monitor, cluster, dashboard, system, manager, online, help
-summary: "The dashboard in System Manager enables you to monitor the health and performance of a cluster. You can also identify hardware problems and storage configuration issues by using the dashboard."
+redirect: online-help-96-97/reference_dashboard_window.html
 ---
-= Monitoring a cluster using the dashboard
-:icons: font
-:imagesdir: ../media/
-
-[.lead]
-The dashboard in System Manager enables you to monitor the health and performance of a cluster. You can also identify hardware problems and storage configuration issues by using the dashboard.
-
-.Steps
-
-. Click the *Dashboard* tab to view the health and performance dashboard panels.
