--- a/online-help-96-97/task_provisioning_basic_template.adoc
+++ b/online-help-96-97/task_provisioning_basic_template.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: sap, hana, provisioning, basic, template, online, help, system, manager
 summary: "You can use System Manager to quickly provision basic templates for SAP HANA."
 ---
-= Provisioning a basic template
+= Provision a basic template by using System Manager classic - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to quickly provision basic templates for SAP HANA.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to quickly provision basic templates for SAP HANA.
 
 .About this task
 
