--- a/online-help-96-97/task_provisioning_storage_by_creating_aggregate_manually.adoc
+++ b/online-help-96-97/task_provisioning_storage_by_creating_aggregate_manually.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: provision, storage, create, aggregate, manually, online, help, hdd, ssd, system, manager
 summary: "You can manually create an aggregate that consists of only HDDs or only SSDs by using System Manager."
 ---
-= Provisioning storage by creating an aggregate manually
+= Manually create an aggregate to provision storage by using System Manager classic - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can manually create an aggregate that consists of only HDDs or only SSDs by using System Manager.
+You can manually create an aggregate that consists of only HDDs or only SSDs by using ONTAP System Manager classic (available in ONTAP 9.7 and earlier).
 
 .Before you begin
 
