--- a/online-help-96-97/task_provisioning_storage_by_creating_snaplock_aggregate_manually.adoc
+++ b/online-help-96-97/task_provisioning_storage_by_creating_snaplock_aggregate_manually.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: system, manager, worm, provision, storage, create, snaplock, aggregate, online, help
 summary: "You can use System Manager to create a SnapLock Compliance aggregate or a SnapLock Enterprise aggregate manually. You can create SnapLock volumes on these aggregates, which provide “write once, read many” (WORM) capabilities."
 ---
-= Provisioning storage by creating a SnapLock aggregate manually
+= Create a SnapLock aggregate manually using System Manager classic - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
