--- a/online-help-96-97/task_provisioning_storage_creating_fabricpool_enabled_aggregate_manually_delete.adoc
+++ b/online-help-96-97/task_provisioning_storage_creating_fabricpool_enabled_aggregate_manually_delete.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: provision, storage, create, fabricpool, aggregate, manually, system, manager, online, help, ssd
 summary: "You can use System Manager to create a FabricPool-enabled aggregate manually or to convert an existing SSD aggregate to a FabricPool-enabled aggregate by attaching a cloud tier to the SSD aggregate."
 ---
-= Provisioning storage by creating a FabricPool-enabled aggregate manually
+= Provision storage by creating a FabricPool-enabled aggregate manually using System Manager classic - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create a FabricPool-enabled aggregate manually or to convert an existing SSD aggregate to a FabricPool-enabled aggregate by attaching a cloud tier to the SSD aggregate.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a FabricPool-enabled aggregate manually or to convert an existing SSD aggregate to a FabricPool-enabled aggregate by attaching a cloud tier to the SSD aggregate.
 
 .Before you begin
 
