--- a/online-help-96-97/task_renaming_metrocluster_local_site_a.adoc
+++ b/online-help-96-97/task_renaming_metrocluster_local_site_a.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, metrocluster, rename, local, site, cluster, online, help
 summary: "You can use System Manager to rename the MetroCluster local site (Site A) in a cluster."
 ---
-= Renaming the MetroCluster local site (Site A)
+= Rename the MetroCluster local site (Site A) by using System Manger classic - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to rename the MetroCluster local site (Site A) in a cluster.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to rename the MetroCluster local site (Site A) in a cluster.
 
 .Steps
 
