--- a/online-help-96-97/task_viewing_system_manager_log_files.adoc
+++ b/online-help-96-97/task_viewing_system_manager_log_files.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: view, ontap, system, manager, log, file, online, help
 summary: "If you encounter any issues when using System Manager, you can send the log files to technical support to help troubleshoot the issues. The System Manager log files are located in the mlog directory along with the ONTAP log files."
 ---
-= Viewing ONTAP System Manager log files
+= View System Manager log files - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-If you encounter any issues when using System Manager, you can send the log files to technical support to help troubleshoot the issues. The System Manager log files are located in the `mlog` directory along with the ONTAP log files.
+If you encounter any issues when using ONTAP System Manager classic (available in ONTAP 9.7 and earlier), you can send the log files to technical support to help troubleshoot the issues. The System Manager log files are located in the `mlog` directory along with the ONTAP log files.
 
 .Steps
 
@@ -35,9 +35,9 @@ This file contains the latest logs for System Manager.
 
 == How system logging works
 
- System logging is an essential tool for application troubleshooting. You should enable system logging so that if there is a problem with an application, the problem can be located. You can enable System Manager logging at runtime without modifying the application binary.
+System logging is an essential tool for application troubleshooting. You should enable system logging so that if there is a problem with an application, the problem can be located. You can enable System Manager logging at runtime without modifying the application binary.
 
- Log output can be voluminous and therefore can become difficult to manage. System Manager enables you to refine the logging output by selecting which type of log statements are output. By default, system logging is set to INFO. You can choose one of the following log levels:
+Log output can be voluminous and therefore can become difficult to manage. System Manager enables you to refine the logging output by selecting which type of log statements are output. By default, system logging is set to INFO. You can choose one of the following log levels:
 
  * OFF
  * ERROR
@@ -45,6 +45,6 @@ This file contains the latest logs for System Manager.
  * INFO
  * DEBUG
 
- These levels function hierarchically. A log level set to OFF indicates no logging of messages.
+These levels function hierarchically. A log level set to OFF indicates no logging of messages.
 
 // 2022-03-23, sm-classic rework, created by Aoife
