--- a/online-help-96-97/task_zeroing_disks.adoc
+++ b/online-help-96-97/task_zeroing_disks.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: zero, spare, disks, system, manager, erase, data, online, help
 summary: "You can use System Manager to erase all the data and to format the spare disks by writing zeros to the disk. These disks can then be used in new aggregates."
 ---
-= Zeroing spare disks
+= Zero spare disks by using System Manager classic - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to erase all the data and to format the spare disks by writing zeros to the disk. These disks can then be used in new aggregates.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to erase all the data and to format the spare disks by writing zeros to the disk. These disks can then be used in new aggregates.
 
 .About this task
 
