--- a/online-help-96-97/task_provisioning_storage_by_creating_aggregate_based_on_storage_recommendations.adoc
+++ b/online-help-96-97/task_provisioning_storage_by_creating_aggregate_based_on_storage_recommendations.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: provision, storage, create, aggregate, recommendation, system, manager, online, help
 summary: "You can use System Manager to create an aggregate based on storage recommendations. System Manager analyzes the configuration of your storage system and provides storage recommendations such as the number of aggregates that will be created, the available nodes, and the available spare disks."
 ---
-= Create an aggregate based on storage recommendations using System Manager classic - ONTAP 9.7 and earlier
+= Create an aggregate based on storage recommendations with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
