--- a/online-help-96-97/task_accessing_cluster_using_system_manager.adoc
+++ b/online-help-96-97/task_accessing_cluster_using_system_manager.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: access, clister, ontap, system, manager, graphic, interface, lif, node, management, online, help
 summary: "If you prefer to use a graphic interface instead of the command-line interface for accessing and managing a cluster, you can do so by using ONTAP System Manager, which is included with ONTAP as a web service, is enabled by default, and is accessible by using a browser."
 ---
-= Access a cluster by using browser-based graphic interface in System Manager - ONTAP 9.7 and earlier
+= Access a cluster with a browser-based graphic interface in System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
