--- a/online-help-96-97/task_adding_microsoft_sql_server_over_san_to_system_manager.adoc
+++ b/online-help-96-97/task_adding_microsoft_sql_server_over_san_to_system_manager.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: add, microsoft, sql, server, san, system, manager, online, help, enhanced, tab
 summary: "You can use the Enhanced tab to add an instance of Microsoft SQL Server over SAN to System Manager."
 ---
-= Add Microsoft SQL Server over SAN to System Manager classic - ONTAP 9.7 and earlier
+= Add Microsoft SQL Server over SAN to System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
