--- a/online-help-96-97/task_creating_cluster.adoc
+++ b/online-help-96-97/task_creating_cluster.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: data, center, create, cluster, online, help, system, manager
 summary: "You can use ONTAP System Manager to create and set up a cluster in your data center."
 ---
-= Create a cluster by using System Manager Classic - ONTAP 9.7 and earlier
+= Create a cluster with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
