--- a/online-help-96-97/task_creating_flexvol_volumes.adoc
+++ b/online-help-96-97/task_creating_flexvol_volumes.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: flexvol, create, volume, online, help
 summary: "You can create a FlexVol volume for your data by using the Create Volume dialog box in System Manager. You must always create a separate volume for your data rather than storing data in the root volume."
 ---
-= Create FlexVol volumes
+= Create FlexVol volumes with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can create a FlexVol volume for your data by using the Create Volume dialog box in System Manager. You must always create a separate volume for your data rather than storing data in the root volume.
+You can create a FlexVol volume for your data by using the Create Volume dialog box in System Manager classic (available in ONTAP 9.7 and earlier). You must always create a separate volume for your data rather than storing data in the root volume.
 
 .Before you begin
 
