--- a/online-help-96-97/task_delegating_administration_to_svm_administrators.adoc
+++ b/online-help-96-97/task_delegating_administration_to_svm_administrators.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: online, help, delegate, administration, svm, administrator
 summary: "After setting up a functional storage virtual machine (SVM) or SVMs with basic network configuration, you can optionally delegate the administration of the SVM to SVM administrators."
 ---
-= Delegating administration to SVM administrators
+= Delegate administration to SVM administrators with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-After setting up a functional storage virtual machine (SVM) or SVMs with basic network configuration, you can optionally delegate the administration of the SVM to SVM administrators.
+After setting up a functional storage virtual machine (SVM) or SVMs with basic network configuration, you can optionally delegate the administration of the SVM to SVM administrators by using System Manager classic (available in ONTAP 9.7 and earlier).
 
 .About this task
 
