--- a/online-help-96-97/task_provisioning_storage_through_aggregates.adoc
+++ b/online-help-96-97/task_provisioning_storage_through_aggregates.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: provision, storage, aggregates, snaplock, fabricpool, online, help, flash, pool
 summary: "You can create an aggregate based on storage recommendations or manually depending on your requirement. You can create Flash Pool aggregates, SnapLock aggregates, and a FabricPool-enabled aggregates to provide storage for one or more volumes by using System Manager."
 ---
-= Provision storage through aggregates by using System Manager classic - ONTAP 9.7 and earlier
+= Provision storage through aggregates with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
