--- a/online-help-96-97/task_setting_up_cluster_by_using_oncommand_system_manager.adoc
+++ b/online-help-96-97/task_setting_up_cluster_by_using_oncommand_system_manager.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: set, up, cluster, ontap, system, manager, online, help, management, network
 summary: "Beginning with ONTAP 9.1, you can use ONTAP System Manager to set up a cluster by creating a cluster, setting up the node management network and cluster management network, and then setting up event notifications."
 ---
-= Setting up the cluster by using ONTAP System Manager
+= Set up the cluster with ONTAP System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-Beginning with ONTAP 9.1, you can use ONTAP System Manager to set up a cluster by creating a cluster, setting up the node management network and cluster management network, and then setting up event notifications.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to set up a cluster by creating a cluster, setting up the node management network and cluster management network, and then setting up event notifications.
 
 .Before you begin
 
