--- a/online-help-96-97/concept_cluster_expansion.adoc
+++ b/online-help-96-97/concept_cluster_expansion.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: cluster, expanision, system, manager, storage, size, capabilities, add, node, configure, network, online, help
 summary: "You can use System Manager to increase the size and capabilities of your storage by adding compatible nodes to the cluster and configuring the node network details. You can also view the summary of the nodes."
 ---
-= Cluster Expansion
+= Cluster Expansion with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to increase the size and capabilities of your storage by adding compatible nodes to the cluster and configuring the node network details. You can also view the summary of the nodes.
+You can use ONTAP System Manager classic (available in 9.7 and earlier) to increase the size and capabilities of your storage by adding compatible nodes to the cluster and configuring the node network details. You can also view the summary of the nodes.
 
 When you log in to System Manager, System Manager automatically detects compatible nodes that have been cabled but have not been added to the cluster and prompts you to add the nodes. You can add compatible nodes as and when System Manager detects the nodes or you can manually add the nodes at a later time.
 
