--- a/online-help-96-97/concept_ipspaces.adoc
+++ b/online-help-96-97/concept_ipspaces.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: ipspace, edit,rename, system, manager, manage, online, help
 summary: "You can use System Manager to create and manage IPspaces."
 ---
-= IPspaces
+= Manage IPspaces with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create and manage IPspaces.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and manage IPspaces.
 
 == Edit IPspaces
 
