--- a/online-help-96-97/concept_licenses.adoc
+++ b/online-help-96-97/concept_licenses.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, view, manage, delete, software, licenses, cluster, node, types, entitlement, risk,
 summary: "You can use System Manager to view, manage, or delete any software licenses installed on a cluster or node."
 ---
-= Licenses
+= Licenses with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to view, manage, or delete any software licenses installed on a cluster or node.
+You can use ONTAP System Manager classic (available in 9.7 and earlier) to view, manage, or delete any software licenses installed on a cluster or node.
 
 == Delete licenses
 
