--- a/online-help-96-97/concept_managing_network.adoc
+++ b/online-help-96-97/concept_managing_network.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, storage, create, manage, ipspace, broadcast, domain, subnet, network, interface, ethernet, port, fc, fcoe, adapter, online, help
 summary: "You can use System Manager to manage the network of your storage system by creating and managing IPspaces, broadcast domains, subnets, network interfaces, Ethernet ports, and FC/FCoE adapters."
 ---
-= Managing the network
+= Manage the network with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to manage the network of your storage system by creating and managing IPspaces, broadcast domains, subnets, network interfaces, Ethernet ports, and FC/FCoE adapters.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to manage the network of your storage system by creating and managing IPspaces, broadcast domains, subnets, network interfaces, Ethernet ports, and FC/FCoE adapters.
 
 == Network window
 :icons: font
