--- a/online-help-96-97/concept_roles.adoc
+++ b/online-help-96-97/concept_roles.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, role, create, user, access, control, online, help
 summary: "You can use System Manager to create access-controlled user roles."
 ---
-= Roles
+= Manage roles with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create access-controlled user roles.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create access-controlled user roles.
 
 == Add roles
 
