--- a/online-help-96-97/concept_snmp.adoc
+++ b/online-help-96-97/concept_snmp.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, configure, snmp, svm, cluster, online, help, test, trap, host, configuration, window, command, protocol,
 summary: "You can use System Manager to configure SNMP to monitor SVMs in your cluster."
 ---
-= SNMP
+= Configure SNMP with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to configure SNMP to monitor SVMs in your cluster.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to configure SNMP to monitor SVMs in your cluster.
 
 == Enable or disable SNMP
 
