--- a/online-help-96-97/task_editing_application.adoc
+++ b/online-help-96-97/task_editing_application.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: edit, application, online, help, provisioned, snapshot, copy
 summary: "You can edit a provisioned application to increase to storage size or to manage the Snapshot copies of the application."
 ---
-= Editing an application
+= Edit an application with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can edit a provisioned application to increase to storage size or to manage the Snapshot copies of the application.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to edit a provisioned application to increase to storage size or to manage the Snapshot copies of the application.
 
 .About this task
 
