--- a/online-help-96-97/task_updating_cluster_nondisruptively.adoc
+++ b/online-help-96-97/task_updating_cluster_nondisruptively.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: nondisruptive, upgrades, NDU, cluster, system, manager, online, help
 summary: 'You can use System Manager to update a cluster or individual nodes in high-availability \(HA\) pairs that are running ONTAP 8.3.1 or later to a specific version of ONTAP software without disrupting access to client data.'
 ---
-= Updating a cluster nondisruptively
+= Update a cluster nondisruptively with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to update a cluster or individual nodes in high-availability (HA) pairs that are running ONTAP 8.3.1 or later to a specific version of ONTAP software without disrupting access to client data.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to update a cluster or individual nodes in high-availability (HA) pairs that are running ONTAP 8.3.1 or later to a specific version of ONTAP software without disrupting access to client data.
 
 .Before you begin
 
