--- a/online-help-96-97/concept_broadcast_domains.adoc
+++ b/online-help-96-97/concept_broadcast_domains.adoc
@@ -4,12 +4,12 @@ sidebar: sidebar
 keywords: system, manager, create, manage, broadcast, domain, online, help, edit, settings, port, delete
 summary: "You can use System Manager to create and manage broadcast domains."
 ---
-= Broadcast domains
+= Manage broadcast domains with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager to create and manage broadcast domains.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create and manage broadcast domains.
 
 == Edit broadcast domain settings
 
