--- a/online-help-96-97/concept_high_availability.adoc
+++ b/online-help-96-97/concept_high_availability.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: high, availability, system, manager, hardware, redundancy, nondisruptive, operations, fault, tolerance
 summary: "You can use System Manager to create high availability (HA) pairs that provide hardware redundancy that is required for nondisruptive operations and fault tolerance."
 ---
-= High availability with System Manager - ONTAP 9.7 and earlier
+= Create high availability pairs with System Manager - ONTAP 9.7 and earlier
 :icons: font
 :imagesdir: ../media/
 
